<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_constraint_message_received_paywall_overlays"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    tools:visibility="visible">


    <!-- Text Message Overlay -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_text_message_paywall_overlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/paywall_overlay_label_text_message_received"
        android:textAllCaps="true"
        android:textColor="@color/textMessages"
        android:textSize="@dimen/default_text_size_sub_headline"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <!-- Image Attachment Overlay -->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_image_attachment_paywall_overlay"
        android:layout_width="0dp"
        android:layout_height="@dimen/paywall_overlay_image_message_received_height"
        android:contentDescription="@string/paywall_overlay_content_description_image_message_received"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_visible_paywall_message"
        app:srcCompat="@drawable/image_not_available" />


    <!-- Video Attachment Overlay -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/icon_video_attachment_paywall_overlay"
        android:layout_width="0dp"
        android:layout_height="@dimen/paywall_overlay_image_message_received_height"
        android:contentDescription="@string/paywall_overlay_content_description_video_message_received"
        android:fontFamily="@font/material_icons_regular"
        android:gravity="center"
        android:text="@string/material_icon_name_videocam"
        android:textSize="@dimen/paywall_overlay_video_icon_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_visible_paywall_message"
        tools:visibility="visible" />


    <!--  Optional Visible Message  -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_visible_paywall_message"
        style="@style/chat_message_body_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Contrary to popular belief, Lorem Ipsum is not simply random text. Latin from 45 BC, making it over 2000 years old."
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>


