<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_constraint_chat_menu_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/headerBG"
    android:paddingHorizontal="@dimen/options_menu_horizontal_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_camera_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_camera_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/option_icon_left_padding"
            android:paddingEnd="@dimen/option_icon_right_padding"
            android:src="@drawable/ic_camera"
            android:tint="@color/mainBottomIcons"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/camera_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/image_view_camera_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_library_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_camera_option_container">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_media_library_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/option_icon_left_padding"
            android:paddingRight="@dimen/option_icon_right_padding"
            android:src="@drawable/ic_media_library"
            android:tint="@color/mainBottomIcons"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/library_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/image_view_media_library_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_gif_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_library_option_container">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_gif_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:fontFamily="@font/material_icons_regular"
            android:gravity="start|center"
            android:text="@string/material_icon_name_gif"
            android:textColor="@color/mainBottomIcons"
            android:textSize="29sp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/gif_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/text_view_gif_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_file_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_gif_option_container">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_file_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:fontFamily="@font/material_icons_regular"
            android:gravity="start|center"
            android:text="@string/material_icon_name_file_attachment"
            android:textColor="@color/mainBottomIcons"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/file_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/text_view_file_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_paid_message_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_file_option_container">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_paid_message_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/option_icon_left_padding"
            android:paddingRight="@dimen/option_icon_right_padding"
            android:src="@drawable/ic_paid_message"
            android:tint="@color/mainBottomIcons"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/paid_message_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/image_view_paid_message_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_request_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_paid_message_option_container">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_request_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/option_icon_left_padding"
            android:paddingRight="@dimen/option_icon_right_padding"
            android:src="@drawable/ic_request"
            android:tint="@color/mainBottomIcons"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/request_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/image_view_request_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_send_option_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_option_height"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_request_option_container">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_send_icon"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/option_icon_left_padding"
            android:paddingRight="@dimen/option_icon_right_padding"
            android:src="@drawable/ic_send"
            android:tint="@color/mainBottomIcons"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/send_attachment_option"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/option_title_text_size"
            app:layout_constraintStart_toEndOf="@+id/image_view_send_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/options_menu_option_divider_height"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_menu_cancel_button_height"
        android:clickable="true"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/attachments_menu_cancel"
        android:textColor="@color/primaryRed"
        android:textSize="@dimen/cancel_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint_send_option_container" />

</androidx.constraintlayout.widget.ConstraintLayout>